# CGCourse2026

./: .gitignore  .gitmodules  CMakeLists.txt
VS_CG_PROJECT/: VS_CG_PROJECT.slnx  VS_CG_PROJECT.vcxproj  VS_CG_PROJECT.vcxproj.filters
output/raytracing/: my_rendering.ppm
src/: CMakeLists.txt
src/code_00_raytracer/: main_rt_AA.cpp  my_main_rt.cpp
src/code_01_setup_glfw/: CMakeLists.txt  main_01.cpp
src/code_02_my_first_triangle/: CMakeLists.txt  main_02.cpp  my_main_02.cpp
src/code_03_wrapping_shaders_buffers/: CMakeLists.txt  main_03.cpp
src/code_03_wrapping_shaders_buffers/shaders/: basic.vert
src/code_04_robotic_arm_transformations/: CMakeLists.txt  main_04.cpp
src/code_04_robotic_arm_transformations/shaders/: basic.frag  basic.vert
src/common/: debugging.h  matrix_stack.h  renderable.h  shaders.h  simple_shapes.h
